--- a/template.yaml
+++ b/template.yaml
@@ -80,3 +80,16 @@ Resources:
       DynamoDBConfig:
         TableName: !Ref DynamoTable
         AwsRegion: !Ref "AWS::Region"
+
+  # JS resolver Get Velo
+  GetVeloResolver:
+    Type: AWS::AppSync::Resolver
+    Properties:
+      ApiId: !GetAtt GraphQLApi.ApiId
+      DataSourceName: !GetAtt WorkshopApiDataSource.Name
+      TypeName: Query
+      FieldName: getVelo
+      CodeS3Location: ./resolvers/getVelo.js
+      Runtime:
+        Name: APPSYNC_JS
+        RuntimeVersion: 1.0.0
