--- a/template.yaml
+++ b/template.yaml
@@ -1,5 +1,5 @@
 # Template: graphqlAPI template with dynamodb table and datasource
-AWSTemplateFormatVersion: "2010-09-09"
+AWSTemplateFormatVersion: '2010-09-09'
 
 Transform:
   - AWS::Serverless-2016-10-31
@@ -14,10 +14,10 @@ Resources:
     Properties:
       TableName: DynamoTable
       AttributeDefinitions:
-        - AttributeName: "id"
+        - AttributeName: 'id'
           AttributeType: S
       KeySchema:
-        - AttributeName: "id"
+        - AttributeName: 'id'
           KeyType: HASH
       ProvisionedThroughput:
         ReadCapacityUnits: 1
@@ -26,30 +26,30 @@ Resources:
   DynamoTableRole:
     Type: AWS::IAM::Role
     Properties:
-      Path: "/"
+      Path: '/'
       AssumeRolePolicyDocument:
-        Version: "2012-10-17"
+        Version: '2012-10-17'
         Statement:
-          - Effect: "Allow"
+          - Effect: 'Allow'
             Principal:
               Service:
-                - "appsync.amazonaws.com"
+                - 'appsync.amazonaws.com'
             Action:
-              - "sts:AssumeRole"
+              - 'sts:AssumeRole'
 
   DynamoTableRoleRolePolicy:
-    Type: "AWS::IAM::Policy"
+    Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: "DynamoTableRoleWrite"
+      PolicyName: 'DynamoTableRoleWrite'
       PolicyDocument:
-        Version: "2012-10-17"
+        Version: '2012-10-17'
         Statement:
-          - Effect: "Allow"
+          - Effect: 'Allow'
             Action:
-              - "dynamodb:PutItem"
-              - "dynamodb:GetItem"
-              - "dynamodb:UpdateItem"
-            Resource: "*"
+              - 'dynamodb:PutItem'
+              - 'dynamodb:GetItem'
+              - 'dynamodb:UpdateItem'
+            Resource: '*'
       Roles:
         - !Ref DynamoTableRole
 
@@ -74,12 +74,12 @@ Resources:
     Type: AWS::AppSync::DataSource
     Properties:
       ApiId: !GetAtt GraphQLApi.ApiId
-      Name: "DynamoDB"
+      Name: 'DynamoDB'
       Type: AMAZON_DYNAMODB
       ServiceRoleArn: !GetAtt DynamoTableRole.Arn
       DynamoDBConfig:
         TableName: !Ref DynamoTable
-        AwsRegion: !Ref "AWS::Region"
+        AwsRegion: !Ref 'AWS::Region'
 
   # JS resolver Get Velo
   GetVeloResolver:
@@ -89,7 +89,20 @@ Resources:
       DataSourceName: !GetAtt WorkshopApiDataSource.Name
       TypeName: Query
       FieldName: getVelo
-      CodeS3Location: ./resolvers/getVelo.js
+      CodeS3Location: src/resolvers/getVelo.js
+      Runtime:
+        Name: APPSYNC_JS
+        RuntimeVersion: 1.0.0
+
+  # JS resolver create Velo
+  CreateVeloResolver:
+    Type: AWS::AppSync::Resolver
+    Properties:
+      ApiId: !GetAtt GraphQLApi.ApiId
+      DataSourceName: !GetAtt WorkshopApiDataSource.Name
+      TypeName: Mutation
+      FieldName: createVelo
+      CodeS3Location: src/resolvers/createVelo.js
       Runtime:
         Name: APPSYNC_JS
         RuntimeVersion: 1.0.0
