--- a/.aws-sam/auto-dependency-layer/template.yaml
+++ b/.aws-sam/auto-dependency-layer/template.yaml
@@ -1,11 +1,7 @@
-# Template: graphqlAPI template with dynamodb table and datasource
 AWSTemplateFormatVersion: '2010-09-09'
-
 Transform:
-  - AWS::Serverless-2016-10-31
-
+- AWS::Serverless-2016-10-31
 Description: An AWS Serverless Specification template describing your function.
-
 Resources:
   DynamoTable:
     Type: AWS::DynamoDB::Table
@@ -14,95 +10,111 @@ Resources:
     Properties:
       TableName: DynamoTable
       AttributeDefinitions:
-        - AttributeName: 'id'
-          AttributeType: S
+      - AttributeName: id
+        AttributeType: S
       KeySchema:
-        - AttributeName: 'id'
-          KeyType: HASH
+      - AttributeName: id
+        KeyType: HASH
       ProvisionedThroughput:
         ReadCapacityUnits: 1
         WriteCapacityUnits: 1
-
   DynamoTableRole:
     Type: AWS::IAM::Role
     Properties:
-      Path: '/'
+      Path: /
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
-          - Effect: 'Allow'
-            Principal:
-              Service:
-                - 'appsync.amazonaws.com'
-            Action:
-              - 'sts:AssumeRole'
-
+        - Effect: Allow
+          Principal:
+            Service:
+            - appsync.amazonaws.com
+          Action:
+          - sts:AssumeRole
   DynamoTableRoleRolePolicy:
-    Type: 'AWS::IAM::Policy'
+    Type: AWS::IAM::Policy
     Properties:
-      PolicyName: 'DynamoTableRoleWrite'
+      PolicyName: DynamoTableRoleWrite
       PolicyDocument:
         Version: '2012-10-17'
         Statement:
-          - Effect: 'Allow'
-            Action:
-              - 'dynamodb:PutItem'
-              - 'dynamodb:GetItem'
-              - 'dynamodb:UpdateItem'
-            Resource: '*'
+        - Effect: Allow
+          Action:
+          - dynamodb:PutItem
+          - dynamodb:GetItem
+          - dynamodb:UpdateItem
+          Resource: '*'
       Roles:
-        - !Ref DynamoTableRole
-
+      - Ref: DynamoTableRole
   GraphQLApi:
     Type: AWS::AppSync::GraphQLApi
     Properties:
       Name: SampleAPI
       AuthenticationType: API_KEY
-
   GraphQLApiKey:
     Type: AWS::AppSync::ApiKey
     Properties:
-      ApiId: !GetAtt GraphQLApi.ApiId
-
+      ApiId:
+        Fn::GetAtt:
+        - GraphQLApi
+        - ApiId
   WorkshopApiGraphQLSchema:
     Type: AWS::AppSync::GraphQLSchema
     Properties:
-      ApiId: !GetAtt GraphQLApi.ApiId
-      DefinitionS3Location: ./src/schema.graphql
-
+      ApiId:
+        Fn::GetAtt:
+        - GraphQLApi
+        - ApiId
+      DefinitionS3Location: ../../src/schema.graphql
   WorkshopApiDataSource:
     Type: AWS::AppSync::DataSource
     Properties:
-      ApiId: !GetAtt GraphQLApi.ApiId
-      Name: 'DynamoDB'
+      ApiId:
+        Fn::GetAtt:
+        - GraphQLApi
+        - ApiId
+      Name: DynamoDB
       Type: AMAZON_DYNAMODB
-      ServiceRoleArn: !GetAtt DynamoTableRole.Arn
+      ServiceRoleArn:
+        Fn::GetAtt:
+        - DynamoTableRole
+        - Arn
       DynamoDBConfig:
-        TableName: !Ref DynamoTable
-        AwsRegion: !Ref 'AWS::Region'
-
-  # JS resolver Get Velo
+        TableName:
+          Ref: DynamoTable
+        AwsRegion:
+          Ref: AWS::Region
   GetVeloResolver:
     Type: AWS::AppSync::Resolver
     Properties:
-      ApiId: !GetAtt GraphQLApi.ApiId
-      DataSourceName: !GetAtt WorkshopApiDataSource.Name
+      ApiId:
+        Fn::GetAtt:
+        - GraphQLApi
+        - ApiId
+      DataSourceName:
+        Fn::GetAtt:
+        - WorkshopApiDataSource
+        - Name
       TypeName: Query
       FieldName: getVelo
-      CodeS3Location: src/resolvers/getVelo.js
+      CodeS3Location: ../../src/resolvers/getVelo.js
       Runtime:
         Name: APPSYNC_JS
         RuntimeVersion: 1.0.0
-
-  # JS resolver create Velo
   CreateVeloResolver:
     Type: AWS::AppSync::Resolver
     Properties:
-      ApiId: !GetAtt GraphQLApi.ApiId
-      DataSourceName: !GetAtt WorkshopApiDataSource.Name
+      ApiId:
+        Fn::GetAtt:
+        - GraphQLApi
+        - ApiId
+      DataSourceName:
+        Fn::GetAtt:
+        - WorkshopApiDataSource
+        - Name
       TypeName: Mutation
       FieldName: createVelo
-      CodeS3Location: src/resolvers/createVelo.js
+      CodeS3Location: ../../src/resolvers/createVelo.js
       Runtime:
         Name: APPSYNC_JS
         RuntimeVersion: 1.0.0
