--- a/samconfig.toml
+++ b/samconfig.toml
@@ -1,8 +1,8 @@
 version = 0.1
 [default.deploy.parameters]
-stack_name = "sam-app"
+stack_name = "appsync"
 resolve_s3 = true
-s3_prefix = "sam-app"
+s3_prefix = "appsync"
 region = "eu-west-1"
 capabilities = "CAPABILITY_IAM"
 image_repositories = []
